--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "digital-link.js",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "An SDK for creating and validating GS1 Digital Link URLs and objects.",
   "main": "src/index.js",
   "scripts": {
@@ -14,8 +14,7 @@
     "nyc": "^14.1.1"
   },
   "dependencies": {
-    "apg-lib": "^3.2.0",
-    "stable": "^0.1.8"
+    "apg-lib": "^3.2.0"
   },
   "repository": {
     "type": "git",
@@ -23,7 +22,8 @@
   },
   "nyc": {
     "exclude": [
-      "tests/*"
+      "tests/*",
+      "lib"
     ],
     "reporter": [
       "cobertura",
