--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
   "name": "digital-link.js",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "An SDK for creating and validating GS1 Digital Link URLs and objects.",
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js --mode production",
     "build-dev": "webpack --config webpack.config.js --mode development",
-    "test": "nyc mocha tests/index.js && rm -rf .nyc_output"
+    "test": "nyc mocha tests/index.js && rm -rf .nyc_output",
+    "prepublishOnly": "npm run build",
+    "prettier": "prettier --write src/**/*.js",
+    "lint": "eslint src"
+  },
+  "eslintConfig": {
+    "extends": "@evrythng/eslint-config-evrythng"
   },
   "author": "EVRYTHNG",
   "license": "Apache-2.0",
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@evrythng/eslint-config-evrythng": "^4.0.1",
     "babel-loader": "^8.0.6",
     "chai": "^4.1.2",
     "mocha": "^5.2.0",
