The isValid method now checks if the check digit of the identifier is valid or not

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-cli": "^3.3.6"
   },
   "dependencies": {
+    "@ollah666/checkdigitcalculator": "^1.0.4",
     "apg-lib": "^3.2.0"
   },
   "repository": {
