--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "digital-link.js",
   "version": "1.3.0",
-  "description": "An SDK for creating and validating GS1 Digital Link URLs and objects.",
+  "description": "A Javascript SDK for creating, validating and working with the GS1 Digital Link.",
   "main": "src/index.js",
   "scripts": {
     "build": "webpack --config webpack.config.js --mode production",
